--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "lint": "tsc --noEmit && tslint 'src/**/*.ts'",
     "copy.html-templates": "copyfiles -u 1 \"./src/formatters/html/*.html\" \"./dist/\"",
     "postbuild.oas-functions": "copyfiles -u 1 \"dist/rulesets/oas*/functions/*.js\" ./",
-    "postbuild": "yarn build.oas-functions && yarn generate-assets",
+    "postbuild": "yarn build.oas-functions && yarn generate-assets && copyfiles -u 1 \"src/runner/parser/**/*.js\" dist",
     "prebuild": "yarn build.clean && copyfiles -u 1 \"src/rulesets/oas*/**/*.json\" dist && copyfiles -u 1 \"src/rulesets/oas*/**/*.json\" ./ && yarn copy.html-templates",
     "prebuild.binary": "yarn build",
     "pretest.karma": "node ./scripts/generate-karma-fixtures.js && yarn pretest",
@@ -73,6 +73,7 @@
     "chalk": "^3.0.0",
     "eol": "^0.9.1",
     "fast-glob": "^3.1.0",
+    "jsep": "^0.3.4",
     "jsonpath-plus": "~2.0",
     "lodash": ">=4.17.5",
     "nanoid": "^2.1.11",
@@ -108,6 +109,7 @@
     "jest": "~25.2",
     "jest-mock": "^25.2.6",
     "jest-when": "~2.7",
+    "jison": "0.4.13",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^3.1.1",
